--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     
     
 
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
         <form action="/submit/data" method="post" id="form">
             <div class="input-box">
@@ -162,7 +162,7 @@
             <textarea name="message" id="" cols="20" rows="10" placeholder="Your Messgage" required></textarea>
             <input type="submit" value="Send Message" class="btn" required>
         </form>
-    </section>
+    </section> -->
 
     <footer class="footer">
         <div class="footer-text">
